--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,6 @@
   </head>
 
   <body style="background-color: #f5f5f5; ">
-
     
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -43,7 +42,7 @@
 
           <% if user_signed_in? %>
             <form class="form-inline" action="/search">
-              <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search User" aria-label="Search">
+              <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search User &#128270;" aria-label="Search">
             </form>           
           <% end %>
         </div>
