--- a/app/views/posts/_favoritesImage.html.erb
+++ b/app/views/posts/_favoritesImage.html.erb
@@ -10,7 +10,8 @@
 		<script>console.log("UnLove");</script>
 	<% end %>
 </div>
-&nbsp;&nbsp;&nbsp;&nbsp;<span class="small" id="favorites-count"><%= pluralize(post.favorites.count, "") %></small></h5>
+<% %>
+&nbsp;&nbsp;&nbsp;&nbsp;<span class="small" id="favorites-count"><%= pluralize(post.favorites.count, "") %></span>
  <script>
   	console.log("####################################");
 	// var count = $("table .FavList #favorite_link").length;
