--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="background-color: #fcfcfc;">
   <head>
     <title>Social Media</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
@@ -15,8 +15,13 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style="background-color: #f5f5f5; ">
-    
+  <body style="background-color: #fcfcfc;">
+    <% if not notice.nil? %>
+      <div class="alert alert-primary" role="alert">
+        <%= notice %>
+      </div>
+    <% end %>
+
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="#">
@@ -47,11 +52,21 @@
           <% end %>
         </div>
         <% if user_signed_in? %>
+          <% str1 = current_user.email.split('@') %>
           <div class="navbar-end">
+            <div class="navbar-item">
+              <% if current_user.avatar.attached? %>
+                <%= image_tag(current_user.avatar, size: '30x30') %>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:crimson; font-size: 20px;"><%= current_user.email %></span><br><br>
+              <% else %>
+                <%= image_tag "default_profile.png", size: '30x30' %>&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:crimson; font-size: 20px;"><%= current_user.email %></span><br><br>
+              <% end %> 
+            </div>
+
             <div class="navbar-item"> 
-            <a><%= link_to "Edit profile", edit_user_registration_path, class: "button is-outlined" %> </a>
+            
+            <a><%= link_to "Edit profile", edit_user_registration_path, class: "button is-primary is-outlined" %> </a>
             &nbsp;&nbsp;
-            <a><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "button is-outlined" %></a>
+            <a><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "button is-link is-outlined" %></a>
           </div>
 
           </div>
