--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form'%>
 <br>
-<%= link_to 'Show', @post, class: "button is-info" %> 
+<% link_to 'Show', @post, class: "button is-info" %> 
 <%= link_to 'Back', posts_path, class: "button is-warning" %>
 <br><br><br><br>
