--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -98,15 +98,16 @@
               <%= f.submit 'Send', class: "button is-link" %>
               </div>
             <% end %>
-
-
-
         <% end %>
       </div>
     </div>
     <br>
     </div>
+
 <% end %>
+
 </div>
-<br><br><br><br>
+<br><br>
+<%= tweet_button %>
+<br><br>
 
