--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,3 +1,21 @@
-$('.cmt-box').html("<%= j render 'comments/allcmt' %>");
+<%
+	@CmtArr = []
+	#@mark = 0
+	@posts.each do |pp|
+		@CmtArr << pp.id
+		if pp.id == @post.id
+			@mark = @CmtArr.find_index(pp.id) + 1
+		end
+	end
+
+	# if @fav_count == 1 || @fav_count == 0
+	# 	result = c.concat("like");
+	# else
+	# 	result = c.concat("likes");
+%>
+var t = "<%= @mark %>";
+console.log(t);
+
+$(".block:nth-child(" + t + ") .card-body .cmt-box").html("<%= j render 'comments/allcmt' %>");
 
 
