--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,7 +113,7 @@
 	justify-content: space-between;
 }
 
-.post-image {
+/*.post-image {
 	margin: auto;
 	width: 100%;
 	height:600px;
@@ -121,12 +121,12 @@
 	border: 1px dotted black;
 	overflow: auto;
 
-}
+}*/
 
 .post-image-item {
-	width: 900px;
+	/*width: 900px;*/
 
-	margin: auto;
+	/*margin: auto;*/
 	/*border: solid 1px black;*/
 }
 
